// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processes last 30 events: after filter - buffers 1`] = `
Array [
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
]
`;

exports[`processes last 30 events: after filter - estimated cycle times 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"prog8\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progt\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events: after filter - inspections 1`] = `
Map {
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part222\\",
}" => Array [
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 34857,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriall",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workw",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriall",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workw",
    },
  ],
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part111\\",
}" => Array [
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 70329,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": Object {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serials",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "work6",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 56538,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serials",
      "time": 2018-02-08T09:44:10.000Z,
      "workorder": "work6",
    },
    Object {
      "cntr": 10,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serials",
      "time": 2018-02-08T09:51:10.000Z,
      "workorder": "work6",
    },
  ],
}
`;

exports[`processes last 30 events: after filter - material summary 1`] = `
Object {
  "matIdsForJob": Map {
    "uniqi" => Array [
      70329,
    ],
    "uniqn" => Array [
      56538,
    ],
    "uniqv" => Array [
      34857,
    ],
  },
  "matsById": Map {
    "34857" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 34857,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "70329" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "56538" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-08T09:51:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:10.000Z,
      "jobUnique": "uniqn",
      "last_event": 2018-02-08T09:51:10.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 56538,
      "numProcesses": 2,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events: after filter - pallet cycles 1`] = `
Map {
  "palaa" => Array [],
  "palbb" => Array [
    Object {
      "active": -1,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    Object {
      "active": -1,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  ],
  "palcc" => Array [
    Object {
      "active": -1,
      "x": 2018-02-08T09:44:10.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events: after filter - station cycles 1`] = `
Array [
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progt",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progr",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:29:05.000Z,
    "y": 12,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:39:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events: after filter - tool use 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"prog8\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.4666666666666667,
          "toolChanged": true,
          "toolName": "9",
        },
        Object {
          "cycleUsageMinutes": 0.38333333333333336,
          "toolChanged": false,
          "toolName": "w",
        },
      ],
    },
  ],
  "PartAndStationOperation {
  \\"operation\\": \\"progt\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.26666666666666666,
          "toolChanged": false,
          "toolName": "v",
        },
        Object {
          "cycleUsageMinutes": 0.35,
          "toolChanged": true,
          "toolName": "m",
        },
      ],
    },
  ],
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChanged": false,
          "toolName": "5",
        },
        Object {
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChanged": true,
          "toolName": "v",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - buffers 1`] = `
Array [
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  Object {
    "buffer": Object {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
]
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"prog8\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progt\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part222\\",
}" => Array [
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 52057,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 52057,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialp",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "worku",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 52057,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serialp",
      "time": 2018-01-06T09:57:05.000Z,
      "workorder": "worku",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 34857,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriall",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workw",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriall",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workw",
    },
  ],
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part111\\",
}" => Array [
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 70329,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "work7",
    },
  ],
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - material summary 1`] = `
Object {
  "matIdsForJob": Map {
    "uniqi" => Array [
      70329,
    ],
    "uniqv" => Array [
      34857,
    ],
    "uniq7" => Array [
      52057,
    ],
  },
  "matsById": Map {
    "34857" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 34857,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "70329" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "52057" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-06T09:57:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:05.000Z,
      "jobUnique": "uniq7",
      "last_event": 2018-01-06T09:57:05.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 52057,
      "numProcesses": 4,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "palaa" => Array [
    Object {
      "active": -1,
      "x": 2018-01-06T09:50:05.000Z,
      "y": 44,
    },
  ],
  "palbb" => Array [
    Object {
      "active": -1,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    Object {
      "active": -1,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - station cycles 1`] = `
Array [
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "prog8",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progt",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 5,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"prog8\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.4666666666666667,
          "toolChanged": true,
          "toolName": "9",
        },
        Object {
          "cycleUsageMinutes": 0.38333333333333336,
          "toolChanged": false,
          "toolName": "w",
        },
      ],
    },
  ],
  "PartAndStationOperation {
  \\"operation\\": \\"progt\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.26666666666666666,
          "toolChanged": false,
          "toolName": "v",
        },
        Object {
          "cycleUsageMinutes": 0.35,
          "toolChanged": true,
          "toolName": "m",
        },
      ],
    },
  ],
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Array [
    Object {
      "tools": Array [
        Object {
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChanged": false,
          "toolName": "5",
        },
        Object {
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChanged": true,
          "toolName": "v",
        },
      ],
    },
  ],
}
`;
